fix(docs): allow wrapping in example items row
Fixes full width elements example.

--- a/src/playground/styles/example-helpers.scss
+++ b/src/playground/styles/example-helpers.scss
@@ -17,19 +17,14 @@
     justify-content: space-around;
   }
 
-  .example-items-row {
-    margin-top: -1rem;
+  .example-items-rows {
     display: flex;
-    flex-direction: row;
+    flex-wrap: wrap;
     align-items: flex-start;
+    margin: -0.5rem;
 
     > * {
-      margin-top: 1rem;
-      margin-right: 1rem;
-
-      &:last-child {
-        margin-right: 0;
-      }
+      margin: 0.5rem;
     }
   }
 
@@ -37,6 +32,7 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+
     & > * {
       margin-bottom: 1rem;
 
